--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-this is a test!!!
+this is a test2!!!
 <img src="img/testimg.jpg" height="300" width="400">
+<img src="img/testimg2.jpg" height="200" width="400">
 </body>
 </html>
